# rag-cosense

./: .env.example  .gitignore  Makefile  README.md  architecture.md  compose.yml
.github/: copilot-instructions.md
.github/agents/: document-engineer.md  frontend-engineer.md  infra-engineer.md  linter-engineer.md  python-engineer.md  test-engineer.md
.github/instructions/: ai-prompt.instructions.md  api-contract.instructions.md  data-management.instructions.md  docker.instructions.md  python.instructions.md  typescript.instructions.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/v1/: api.py
backend/src/api/v1/endpoints/: chat.py  health.py  index.py
backend/src/core/: config.py
backend/src/schemas/: chat.py
backend/src/services/: chat.py  cosense.py  indexer.py
backend/tests/: test_chat.py  test_config.py  test_health.py  test_main.py
batch/: Dockerfile  pyproject.toml
batch/src/: main.py
batch/src/core/: config.py
batch/src/services/: cosense.py  indexer.py
batch/tests/: __init__.py  test_config.py  test_cosense.py  test_indexer.py
encoder/: .dockerignore  Dockerfile  mypy_errors.txt  pyproject.toml
encoder/src/: main.py
encoder/src/api/: router.py
encoder/src/models/: splade.py
encoder/src/schemas/: encode.py
encoder/tests/: conftest.py  test_api.py  test_splade.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/coverage/: coverage-final.json  index.html
frontend/coverage/frontend/: .eslintrc.cjs.html  index.html  postcss.config.js.html  tailwind.config.js.html
frontend/coverage/frontend/src/: App.tsx.html  index.html  main.tsx.html
frontend/coverage/frontend/src/api/: chat.ts.html  client.ts.html  index.html
frontend/coverage/frontend/src/components/: Chat.tsx.html  index.html
frontend/coverage/frontend/src/hooks/: index.html  useChat.ts.html
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: chat.test.ts  chat.ts  client.ts
frontend/src/components/: Chat.test.tsx  Chat.tsx
frontend/src/hooks/: useChat.test.ts  useChat.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.ts
