[project]
name = "rag-cosense-backend"
version = "0.1.0"
description = "Backend for RAG-Cosense"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "elasticsearch>=8.12.0,<9.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
