[project]
name = "rag-cosense-batch"
version = "0.1.0"
description = "Batch synchronization for RAG-Cosense"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.12.0,<9.0.0",
    "langchain-text-splitters>=0.0.1",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "asyncio>=3.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.12.1",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
