[project]
name = "encoder"
version = "0.1.0"
description = "SPLADE encoder service for rag-cosense"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "fugashi",
    "ipadic",
    "unidic-lite",
    "pydantic",
]

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
