[project]
name = "encoder"
version = "0.1.0"
description = "SPLADE encoder service for rag-cosense"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "fugashi",
    "ipadic",
    "unidic-lite",
    "pydantic",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.2.0",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
